testdata/baselines/reference/submodule/compiler/iteratorsAndStrictNullChecks.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
iteratorsAndStrictNullChecks.ts(2,17): error TS2488: Type '{}' must have a '[Symbol.iterator]()' method that returns an iterator.
iteratorsAndStrictNullChecks.ts(9,4): error TS2339: Property 'push' does not exist on type '{}'.
iteratorsAndStrictNullChecks.ts(9,12): error TS2488: Type '{}' must have a '[Symbol.iterator]()' method that returns an iterator.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== iteratorsAndStrictNullChecks.ts (3 errors) ====
    // for..of
    for (const x of ["a", "b"]) {
                    ~~~~~~~~~~
!!! error TS2488: Type '{}' must have a '[Symbol.iterator]()' method that returns an iterator.
        x.substring;
    }
    
    // Spread
    const xs = [1, 2, 3];
    const ys = [4, 5];
    xs.push(...ys);
       ~~~~
!!! error TS2339: Property 'push' does not exist on type '{}'.
               ~~
!!! error TS2488: Type '{}' must have a '[Symbol.iterator]()' method that returns an iterator.
    